# LeagueCord

./: .dockerignore  .gitignore  .ignore  BRAIN_CACHE.md  Cargo.toml  Containerfile  Dockerfile  IDEAS.md  README.md  ROADMAP.md  Rocket.toml
back/: Cargo.toml
back/src/: data.rs  main.rs
back/src/bot/handlers/: debug.rs  door.rs  leaguecord.rs  mod.rs  player_helper.rs  purge.rs
back/src/data/: gc_spam_tracker.rs  group.rs  id_cache.rs  invite_tracker.rs
back/src/server/: catchers.rs  error.rs  mod.rs  response.rs  routes.rs
back/src/server/routes/: bots.rs  create_group.rs  group.rs  group_not_found.rs
front/: Cargo.toml
front/src/: app.rs  lib.rs  main.rs  time.rs  utils.rs
front/src/apps/: home.rs  mod.rs
front/src/component/: changing_text.rs  mod.rs  notification.rs
front/src/scene/: about.rs  contatct.rs  group.rs  group_not_found.rs  home.rs  mod.rs  not_found.rs
scripts/: build_back.sh  build_docker.sh  clean.sh  clean_back.sh  container_build.sh  init.sh  run.sh  watch_back.sh
shared/: Cargo.toml
shared/src/: lib.rs
src/: data.rs  main.rs
src/bot/: command.rs  mod.rs
src/bot/frameworks/: dispatcher.rs  mod.rs
src/bot/handlers/: debug.rs  door.rs  leaguecord.rs  logger.rs  mod.rs  player_helper.rs  purge.rs
src/bot/handlers/leaguecord/: data.rs
src/data/: group.rs  id_cache.rs  invite_tracker.rs
src/server/: catchers.rs  error.rs  mod.rs  response.rs  routes.rs
src/server/routes/: create_group.rs  group.rs
static/: front.js  front_bg.wasm  index.html
static/css/: about.css  contact.css  group.css  group_not_found.css  home.css
