[package]
name = "front"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "front"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
gloo = "0.11.0" # Yew depends on this version
gloo-timers = { version = "0.3.0", features = ["futures"] }
js-sys = "0.3.70"
yew = { version = "0.21.0", features = [
  "csr",
] } # csr allows access to yew::Renderer
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
yew-router = "0.18.0"
serde_json.workspace = true
web-time = "1.1.0"

[dependencies.web-sys]
version = "0.3.70"
